# obsign

./: pyproject.toml
obsign/: __main__.py
tests/: test_obsign.py
