[tool.poetry]
name = "obsign"
version = "0.1.0"
description = ""
authors = ["Lachlan Holden <lachlan.holden@adelaide.edu.au>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
rich = "^12.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
